--- a/style.css
+++ b/style.css
@@ -1,1 +1,44 @@
 /* Your CSS styles go here */
+body {
+    background: #2E2E2E;
+    padding: 50px; 
+    color: white; 
+}
+h1 {
+    font-family: 'Times New Roman', Times, serif; 
+    font-size: 32px;
+    text-align: center;
+}
+h2 {
+    font-family: 'Times New Roman', Times, serif; 
+    text-align: center;
+}
+ul {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    text-align: center;
+    font-size: 25px;
+}
+img {
+    border: solid 1px black;
+    box-shadow: black; 
+    border-radius: 10px;
+    text-align: center;
+}
+table {
+    border: solid 1px black; 
+    padding: 10px; 
+}
+td {
+    height: 50px;
+    vertical-align: bottom;
+    text-align: center;
+}
+form {
+    text-align: center; 
+}
+form label ,  input{
+    margin: 20px; 
+}
+button:hover {
+    background: gray; 
+}
