--- a/style.css
+++ b/style.css
@@ -1,1 +1,97 @@
 /* Your CSS styles go here */
+html, 
+.head {
+    background: url(img/background.jpg) no-repeat ;
+    background-size: 100% 100%;  
+    height: 25%;
+    width: 100%;
+}
+.head h1,h4 {
+    text-align: center; 
+    margin: 0 auto;
+   position: relative;
+    top: 50px;
+    left: 200px;
+    color: white;
+
+}
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 30px;
+    text-align: right;
+    text-decoration: none;
+    border-radius: 50%;
+  }
+
+img {
+    border: solid 1px black; 
+    border-radius: 20px; 
+    box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
+    position: relative;
+    top:5px; 
+    left: 100px;
+}
+h2 {
+    font-weight: bold; 
+}
+.head2 {
+    padding-top: 25px;
+}
+section{
+    margin: 0 auto;
+}
+span #me{
+    color: darkblue;
+}
+.info {
+    font-weight: bold;
+}
+.section-1{
+    width: 100%;
+    padding: 25px;
+    margin-top: 100px;
+    background: #222;
+}
+blockquote{
+    color :white;
+    padding: 50x; 
+    margin:45px; 
+    font-size: 35px;
+}
+ cite {
+        color: gray; 
+        border: none;
+        margin-top: 40px; 
+        font-size: 18px; 
+        font-family: 'Times New Roman', Times, serif; 
+        text-align: right; 
+        font: bold; 
+        display: block; 
+        font-weight: bold; 
+    }
+.table {
+    padding: 25px;
+    margin: 0 auto;
+}
+th {
+    background: #262626;
+    color: aliceblue;
+}
+ol {
+    font-size: 20px;
+}
+.section-2 input {
+    padding: 20px;
+}
+.section-2 textarea {
+    margin: 10px;
+}
+footer {
+    background: #222;
+    text-align: center;
+    color: aliceblue;
+}
+footer a{
+    color: hotpink;
+}
