--- a/style.css
+++ b/style.css
@@ -3,17 +3,22 @@ html,
 .head {
     background: url(img/background.jpg) no-repeat ;
     background-size: 100% 100%;  
-    height: 25%;
+    height: 100%;
     width: 100%;
 }
 .head h1,h4 {
     text-align: center; 
+    font-size: 225%;
     margin: 0 auto;
-   position: relative;
+    padding-top: 10px;
+    color: white;
+ /*  position: relative;
     top: 50px;
     left: 200px;
     color: white;
-
+*/
+}
+.head h1 { 
 }
 .fa {
     padding: 20px;
@@ -25,12 +30,13 @@ html,
   }
 
 img {
+    margin: 25px;
     border: solid 1px black; 
     border-radius: 20px; 
     box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
-    position: relative;
+  /*  position: relative;
     top:5px; 
-    left: 100px;
+    left: 100px;*/
 }
 h2 {
     font-weight: bold; 
@@ -94,4 +100,9 @@ footer {
 }
 footer a{
     color: hotpink;
+}
+@media (max-width:450px) {
+    body {
+        padding: 15px;
+    }
 }
